[#42]: [App] Unified Ulli :) (http://github.com/fb71/areca/issues/42)
- Query.orderBy() started; use new indexes; does not work if predicate is present
- ManyAssociation.query() started